@@ -296,4 +296,39 @@
 	font-style: inherit;
 	color: inherit;
 }
+
+.proposeButton 
+{
+	background-image: linear-gradient(to right, #16222A 0%, #3A6073 51%, #16222A 100%);
+	text-align: center;
+	transition: 0.5s;
+	background-size: 200% auto;
+	color: white;
+	box-shadow: 0 0 20px black;
+	border: 1px outset white;
+	padding: 6px 12px;
+	font-size: 90%;
+	margin-right: 0.5em;
+	margin-bottom: 0.5em;
+}
+
+.proposalLabel 
+{
+	position: relative;
+	left: 0.5em;
+	top: 0.45em;
+	vertical-align: top;
+}
+
+.proposalInput 
+{
+	position: relative;
+	left: 0.6em;
+	top: 0.45em;
+	width: 70vw;
+	background: none;
+	border: none;
+	resize: none;
+	font-size: inherit;
+	font-family: inherit;
 }
