@@ -1,59 +1,0 @@
-<?php  
-require_once("../Views/view.php");
-
-class PrimarySubjectView extends View 
-{
-
-	public function __construct()
-	{
-		$this->createView();
-	}
-
-	private function createView() 
-	{
-		$this::$viewContent = "";
-	}
-
-	public function getView() : string 
-	{
-		$this->createView();
-		return Parent::getViewContent();
-	}
-
-}
-?>
-
-<?php  
-require_once("../Models/model.php");
-
-class PrimarySubjectModel extends Model
-{
-	public function __construct() {}
-
-	public function execute() : array 
-	{
-		$returnData = [];
-
-		return $returnData;
-	}
-}
-?>
-
-<?php  
-require_once("../Controllers/controller.php");
-require_once("../Views/PrimarySubjectView.php");
-require_once("../Models/PrimarySubjectModel.php");
-
-class PrimarySubjectController extends Controller 
-{
-	public function __construct() 
-	{
-		$this->view = new PrimarySubjectView();
-		$this->model = new PrimarySubjectModel();
-	}
-}
-
-$controller = new PrimarySubjectController();
-$response = $controller->register();
-echo json_encode($response);
-?>
