@@ -9,7 +9,7 @@
 			<img class="sidebarArrowImg" onClick="collapseSidebar()" src="../IMG/back.png"></img>
 		</button>
 		<div class="sidebarContent">
-				<p class="button"><a>Proposals</a></p>
+				<p class="button"><a onclick="callController('.content', 'proposalController')">Proposals</a></p>
 				<p class="button"><a>My account</a></p>
 				<p class="button"><a>Contact</a></p>
 				<p class="button"><a>About us</a></p>	
